fix reads image paths

--- a/content/posts/20231231-2023-top-books.md
+++ b/content/posts/20231231-2023-top-books.md
@@ -11,7 +11,7 @@ description: In 2023, I have read 43 [books](https://felixleger.com/books), a ma
 ---
 
 # Come As You Are
-{{< figure src="/img/books/come-as-you-are.jpg" position="center" caption=""  style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/come-as-you-are.png" position="center" caption=""  style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-47-come-as-you-are)
 
@@ -29,7 +29,7 @@ will surely spark some interesting conversations!
 
 
 # :star: Crucial Conversations
-{{< figure src="/img/books/crucial-conversations.jpg" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/crucial-conversations.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-46-crucial-conversations)
 
@@ -46,7 +46,7 @@ led me to (often unfortunate) actions. This was one of my blind spots,
 and by shedding some light on it, I think I became a better person.
 
 # :star: Radical Candor {#rc}
-{{< figure src="/img/books/radical-candor.jpg" position="center" caption="" style="height: auto; width: 50%;" >}}
+{{< figure src="/img/reads/radical-candor.jpg" position="center" caption="" style="height: auto; width: 50%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-20-radical-candor)
 
@@ -71,7 +71,7 @@ Don't wait for your company to give you management training. Go straight
 to the source and read this amazing book!
 
 # Shape Up
-{{< figure src="/img/books/shape-up.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/shape-up.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-22-shape-up)
 
@@ -98,7 +98,7 @@ minimum that will satisfy your stakeholders. You can never re-do a first impress
 most first impressions revolve around punctuality.
 
 # :star:  Sooner Safer Happier {#ssh}
-{{< figure src="/img/books/sooner-safer-happier.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/sooner-safer-happier.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-25-sooner-safer-happier)
 
@@ -123,7 +123,7 @@ could not recommend this book enough. This one deserves a gold star, for
 sure.
 
 # Start With Why
-{{< figure src="/img/books/start-with-why.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/start-with-why.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-26-start-with-why)
 
@@ -140,7 +140,7 @@ something good for the wrong reasons. Powerful and timeless insight,
 indeed!
 
 # The 48 Laws of Power
-{{< figure src="/img/books/the-48-laws-of-power.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/the-48-laws-of-power.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-55-the-48-laws-of-power)
 
@@ -164,7 +164,7 @@ myself in public, and what bad habits to look out for, in order to have
 better working relationships.
 
 # :star: The Fearless Organization
-{{< figure src="/img/books/the-fearless-organization.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/the-fearless-organization.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-30-the-fearless-organization)
 
@@ -188,7 +188,7 @@ psychological safety really is the magic ingredient that allows us to be
 both happy and productive.
 
 # :star: The Fifth Discipline {#tfd}
-{{< figure src="/img/books/the-fifth-discipline.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/the-fifth-discipline.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-35-the-fifth-discipline)
 
@@ -205,7 +205,7 @@ this was written in 1990!" Had this come out today, it would still be a
 smash hit. Its insight is absolutely timeless. Check it out.
 
 # The Phoenix Project
-{{< figure src="/img/books/the-phoenix-project.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/the-phoenix-project.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-41-1-the-phoenix-project)
 
@@ -227,7 +227,7 @@ point you are looking for. When you are done, my recommendation is to
 then check out [Sooner Safer Happier](#ssh).
 
 # Thinking in Systems
-{{< figure src="/img/books/thinking-in-systems.png" position="center" caption="" style="height: auto; width: 100%;">}}
+{{< figure src="/img/reads/thinking-in-systems.png" position="center" caption="" style="height: auto; width: 100%;">}}
 
 [Link to my original review](https://felixleger.com/books/book-39-thinking-in-systems)
 
@@ -238,7 +238,7 @@ Discipline](#tfd). If you are intimidated by the length and Depth of The
 Fifth Discipline, look no further than this book. It's gold.
 
 # What Color Is Your Parachute
-{{< figure src="/img/books/what-color-is-your-parachute.jpg" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/what-color-is-your-parachute.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-52-what-color-is-your-parachute)
 
@@ -258,7 +258,7 @@ even encourage you to start writing *in the book*!), but if you do the
 exercises dutifully, I'm sure it will pay off. It did for me.
 
 # When They Win, You Win
-{{< figure src="/img/books/when-they-win-you-win.jpg" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/when-they-win-you-win.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-43-when-they-win-you-win)
 
@@ -277,7 +277,7 @@ to be headed. I tried those questions on myself and I could feel their
 surgical precision. Good stuff.
 
 # :star: Wiring the Winning Organization
-{{< figure src="/img/books/wiring-the-winning-organization.png" position="center" caption="" style="height: auto; width: 100%;" >}}
+{{< figure src="/img/reads/wiring-the-winning-organization.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original
 review](https://felixleger.com/books/book-58-wiring-the-winning-organization)
