update throw45 problem prompt

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -7,14 +7,19 @@ tags:
   - physics
 ---
 {{< partial "mathjax_support" >}}
-# Background
+# Motivation
 
 I recently discovered how to write equations in my Hugo website using Mathjax (credit goes to
 [kunlei](https://kunlei.github.io/2019/08/19/mathjax-setup/) for the instructions!). In order to demonstrate
 the awesomeness of this tool (and also to refresh my memory on basic Physics concepts I have not used in a
 long time), let me demonstrate why 45 degrees is the ideal angle to throw something at maximum range.
 
-# Solution
+# The Problem
+
+Prove that the angle at which an object must be thrown to maximize
+distance is $45^{o}$, assuming the is no air resistance.
+
+# The Solution
 
 First off, for simplification purposes, let us suppose the friction due to air resistance is negligible.
 
