throw 45 in the big time

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -1,10 +1,11 @@
 ---
-title: "Launching something at a 45 degree angle"
+title: "Physics problem: Launching something at a 45 degree angle"
 date: 2021-01-07T16:09:35-05:00
 toc: false
 cover: img/throw.png
 tags:
   - physics
+  - featured
 ---
 {{< partial "mathjax_support" >}}
 # Motivation
@@ -45,7 +46,13 @@ $\frac{dx}{d\theta}=0$.
 So, our game plan is to find the equation of $x(\theta)$ and find which value of $\theta$ makes
 $\frac{dx}{d\theta}=0$.
 
-A well known equation of kinematics is $d=v_i\Delta t + \frac{1}{2}a\Delta t^2$. When applied to the movement
+A well known equation of kinematics is $d=v_i\Delta t + \frac{1}{2}a\Delta t^2$, where:
+- $d$ is distance
+- $v_i$ is the initial velocity
+- $a$ is the constant acceleration
+- $\Delta t$ is the time elapsed
+
+. When applied to the movement
 of our thrown object over the $x$ axis, this becomes
 
 $$ x=v_{ix}\Delta t + \frac{1}{2} a_x \Delta t^2$$
