derivation rules reminder

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -88,7 +88,9 @@ We can thus substitute this value in the earlier equation we found for $x(\theta
 
 $$ x(\theta)=v\cos\theta\Delta t(\theta) = v\cos\theta\left(\frac{-2v\sin\theta}{a_y}\right) = \frac{-2v^2\cos\theta\sin\theta}{a_y}$$
 
-Let us derivate this equation:
+Let us derivate this equation ([here is a cheatsheet for derivation rules
+if this step seems
+unclear](https://www.mathsisfun.com/calculus/derivatives-rules.html)):
 
 $$ \frac{dx}{d\theta} = \frac{-2v^2}{a_y}\left(-\sin^2\theta+\cos^2\theta\right) = \frac{2v^2}{a_y}\left(\sin^2\theta-\cos^2\theta\right) $$
 
