--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -18,7 +18,7 @@ long time), let me demonstrate why 45 degrees is the ideal angle to throw someth
 # The Problem
 
 Prove that the angle at which an object must be thrown to maximize
-distance is $45^{o}$, assuming the is no air resistance.
+distance is $45^{o}$, assuming there is no air resistance.
 
 # The Solution
 
