--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -37,7 +37,7 @@ between 0 and 90.
 
 Naively, we can assume the $x(\theta)$ function looks a little something like this:
 
-{{< figure src="/img/x-theta.png" position="center" caption="The travelled distance $x$ as a function of the angle $\theta$" >}}
+{{< figure src="/img/x-theta.png" position="center" caption="The travelled distance $x$ as a function of the angle $\theta$. This is not an exact plot, but it roughly matches my experience when throwing things at various angles." >}}
 
 Because the thrown object moves in a fluid motion that follows the laws of kinematics, it is reasonable to
 expect that $\theta_m$ is found exactly where the derivative of $x(\theta)$ becomes 0, that is to say
