--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -58,9 +58,12 @@ of our thrown object over the $x$ axis, this becomes
 $$ x=v_{ix}\Delta t + \frac{1}{2} a_x \Delta t^2$$
 $$ \Leftrightarrow x=  v_{ix}\Delta t \quad \text{because $a_x$ = 0}$$
 
+
+By expressing the velocity in terms of $x$ and $y$ components, 
+
 {{< figure src="/img/velocity-components.png" position="center" >}}
 
-By expressing the velocity in terms of $x$ and $y$ components (see figure above), we can re-express $x$ as
+we can re-express $x$ as
 
 $$ x = v\cos\theta\Delta t $$
 
