--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -69,8 +69,9 @@ $$ x = v\cos\theta\Delta t $$
 
 Ah ha! We are starting to unfold how $x$ is dependent of $\theta$ explicitly. However, inside $\Delta t$,
 there is a hidden dependency on $\theta$. Indeed, you can imagine, if we throw an object at $\theta=0$, its
-airborne time will be null. On the other hand, if we throw that same object at $\theta=90$, its airborne time
-will certainly be $>0$ (assuming $v \neq 0$). Thus, what is the expression for $\Delta t (\theta)$?
+airborne time will be very shorter then if we throw it with the same strength at the sky at $\theta=90^{o}$. Thus, the time of flight is dependent on the angle at which we throw the ball (makes sense).
+
+What is the expression for $\Delta t (\theta)$?
 
 Let's use the kinematics equation in the $y$ axis to get some insight.
 
