--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -1,5 +1,5 @@
 ---
-title: "Physics problem: Launching something at a 45 degree angle"
+title: "Physics problem: Why throw at 45 degrees?"
 date: 2021-01-07T16:09:35-05:00
 toc: false
 cover: img/throw.png
