(throw45.md) fix title capitalization

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -1,5 +1,5 @@
 ---
-title: "Physics problem: Why throw at 45 degrees?"
+title: "Physics Problem: Why Throw at 45 Degrees?"
 date: 2021-01-07T16:09:35-05:00
 toc: false
 cover: img/throw.png
