--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -22,15 +22,13 @@ distance is $45^{o}$, assuming there is no air resistance.
 
 # The Solution
 
-First off, for simplification purposes, let us suppose the friction due to air resistance is negligible.
-
-If we use a referential where the $x$ axis is parallel to the ground and $y$ axis is perpendicular to the
+Let's use a referential where the $x$ axis is parallel to the ground and $y$ axis is perpendicular to the
 ground, what we want to maximize is the function $x(\theta)$, i.e. the distance travelled by our object as a
 function of the angle at which we throw it. Let's define $\theta$ as the angle we throw the object with
 respect to the $y$ axis.
 
 Intuitively, we know that an object thrown with $\theta=0$ wouldn't travel any distance because
-it would reach the ground immediately. Similarly, we know that throwing an object with $\theta=90$ would have the
+it would reach the ground immediately (if thrown from the ground, e.g. by a cannon). Similarly, we know that throwing an object with $\theta=90$ would have the
 same result: the object would go up in the air, and in the absence of wind, would fall back exactly from where
 it left the ground initially. Thus, the angle that maximizes the distance ($\theta_m$) is an angle
 between 0 and 90.
@@ -52,11 +50,11 @@ A well known equation of kinematics is $d=v_i\Delta t + \frac{1}{2}a\Delta t^2$,
 - $a$ is the constant acceleration
 - $\Delta t$ is the time elapsed
 
-. When applied to the movement
+When applied to the movement
 of our thrown object over the $x$ axis, this becomes
 
 $$ x=v_{ix}\Delta t + \frac{1}{2} a_x \Delta t^2$$
-$$ \Leftrightarrow x=  v_{ix}\Delta t \quad \text{because $a_x$ = 0}$$
+$$ \Leftrightarrow x=  v_{ix}\Delta t \quad \text{because $a_x$ = 0, no air resistance!}$$
 
 
 By expressing the velocity in terms of $x$ and $y$ components, 
@@ -69,7 +67,7 @@ $$ x = v\cos\theta\Delta t $$
 
 Ah ha! We are starting to unfold how $x$ is dependent of $\theta$ explicitly. However, inside $\Delta t$,
 there is a hidden dependency on $\theta$. Indeed, you can imagine, if we throw an object at $\theta=0$, its
-airborne time will be very shorter then if we throw it with the same strength at the sky at $\theta=90^{o}$. Thus, the time of flight is dependent on the angle at which we throw the ball (makes sense).
+airborne time will be much shorter than if we throw it with the same strength at the sky at $\theta=90^{o}$. Thus, the time of flight is dependent on the angle at which we throw the ball (makes sense).
 
 What is the expression for $\Delta t (\theta)$?
 
