--- a/content/posts/20240730-key.md
+++ b/content/posts/20240730-key.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 You probably landed on this page because you typed
-"https://felx.cc/KEY" in your browser. If so, congratulations! You
+"https://felx.cc/Key" in your browser. If so, congratulations! You
 were successfully redirected to this blog post.
 
 Welcome to my website, by the way! Feel free to look around. :smiley:
